# mavros

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  STATUS.md  THIRD_PARTY_LICENSES  clippy.toml  dprint.json  flake.nix  rustfmt.toml
.github/scripts/: check_growth.py  check_regression.py  merge_status.py
.github/workflows/: test-runner.yml
ast-interpreter/: Cargo.toml
ast-interpreter/fixtures/interp_assert_fail/: Nargo.toml
ast-interpreter/fixtures/interp_assert_fail/src/: main.nr
ast-interpreter/fixtures/interp_reachable_error/: Nargo.toml
ast-interpreter/fixtures/interp_reachable_error/src/: main.nr
ast-interpreter/src/: diff.rs  error.rs  eval.rs  input.rs  lib.rs  tests.rs  validation_frontend.rs  value.rs
compiler/: Cargo.toml
compiler/src/: abi_helpers.rs  api.rs  collections.rs  driver.rs  flamegraph.rs  goldilocks_field_bridge.rs  lib.rs  lowlevel_replacement.rs  plotting.rs  project.rs  wasm_debug.rs  wasm_runtime.rs
compiler/src/compiler/: assert_constant.rs  block_builder.rs  hlssa_to_llssa.rs  llssa.rs  llssa_llvm_codegen.rs  located.rs  mod.rs  pass_manager.rs  purify_witness_slices.rs  r1cs_gen.rs  ssa.rs  symbolic_executor.rs  untaint_control_flow.rs  util.rs  witness_info.rs  witness_type_inference.rs
compiler/src/compiler/analysis/: flow_analysis.rs  instrumenter.rs  liveness.rs  lookup_sizing.rs  mod.rs  slice_lengths.rs  symbolic_executor.rs  types.rs  value_definitions.rs  value_range_analysis.rs  witness_info.rs  witness_type_inference.rs
compiler/src/compiler/analysis/click_cooper/: conditional.rs  congruence.rs  def_order.rs  exec_view.rs  lattice.rs  mod.rs  solver.rs  stability.rs  summary.rs  test.rs
compiler/src/compiler/analysis/points_to/: array_cells.rs  builder.rs  mod.rs  object.rs  solver.rs  summary.rs
compiler/src/compiler/analysis/shared/: call_string.rs  fixpoint.rs  mod.rs
compiler/src/compiler/analysis/witness_taint_inference/: builder.rs  graph.rs  mod.rs  phases.rs  position.rs
compiler/src/compiler/analysis/witness_type_inference/: fixpoint.rs  signature.rs  solver.rs  specialization.rs
compiler/src/compiler/codegen/: constants.rs  hlssa_to_r1cs.rs  llssa_to_llvm.rs  mod.rs  r1cs_compact.rs
compiler/src/compiler/codegen/bytecode/: layout.rs  mod.rs
compiler/src/compiler/ir/: type.rs
compiler/src/compiler/lowering/: expression_converter.rs  mod.rs  type_converter.rs
compiler/src/compiler/passes/: arg_promotion.rs  arithmetic_simplifier.rs  array_boundary_expansion.rs  array_sroa.rs  common_subexpression_elimination.rs  condition_propagation.rs  dead_code_elimination.rs  deduplicate_functions.rs  deduplicate_phis.rs  defunctionalize.rs  degree_spilling.rs  elide_tuples.rs  explicit_witness.rs  fix_double_jumps.rs  flatten_arrays.rs  fold_constant_branches.rs  lookup_spilling.rs  lower_bit_range_ops.rs  lower_guards.rs  lower_map_casts.rs  lower_pure_guards.rs  lower_witness_array_ops.rs  lower_witness_bitwise_ops.rs  lower_witness_integer_arith_ops.rs  lower_witness_integer_casts_and_shifts.rs  lower_witness_spread_ops.rs  lower_witness_unspread.rs  lowering_pass.rs  mem2reg.rs  merge_identical_functions.rs  mod.rs  normalize_asserts.rs  prepare_entry_point.rs  pull_into_assert.rs  rc_insertion.rs  remove_unreachable_blocks.rs  remove_unreachable_functions.rs  simplifier.rs  simplify_asserts.rs  sparse_conditional_constant_propagation.rs  (+10 more)
compiler/src/compiler/passes/algebraic_lowering/: bit_range.rs  mod.rs  pure_guards.rs  witness_array.rs  witness_bitwise.rs  witness_integer_arith.rs  witness_integer_utils.rs  witness_spread.rs
compiler/src/compiler/passes/instruction_lowering/: bit_range.rs  degree_spilling.rs  lookup_spilling.rs  mod.rs  pure_guards.rs  side_effect_free_guards.rs  slice_select.rs  unrefutable_guards.rs  witness_array.rs  witness_assert.rs  witness_bitwise.rs  witness_compare.rs  witness_field.rs  witness_integer_arith.rs  witness_memory.rs  witness_spread.rs
compiler/src/compiler/passes/partial_redundancy_elimination/: edge_split.rs  eliminate.rs  insert.rs  mod.rs  test.rs  totality.rs
compiler/src/compiler/passes/shared/: availability.rs  mod.rs  rewrite_asserts.rs  value_replacements.rs
compiler/src/compiler/passes/sparse_conditional_simplification/: mod.rs  test.rs
compiler/src/compiler/ssa/: builder.rs  hlssa_to_llssa.rs  id.rs  mod.rs  traits.rs
compiler/src/compiler/ssa/hlssa/: builder.rs  mod.rs  type_system.rs
compiler/src/compiler/ssa/llssa/: builder.rs  mod.rs  type_system.rs
compiler/src/compiler/ssa_gen/: expression_converter.rs  type_converter.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  WITNESS_TYPE_INFERENCE.md  field-agnosticism.md  llssa.md
docs/types-refactor/: 00-overview.md  01-type-system.md  02-type-inference.md  03-monomorphization.md  04-pipeline.md  05-implementation-plan.md
llvm_tests/power/: README.md  power.c
mavros-artifacts/: Cargo.toml  README.md
mavros-artifacts/src/: lib.rs
mavros-artifacts/src/field/: config.rs  element.rs  mavros_field.rs  mod.rs
mavros_stdlib/: README.md  lib.nr  mavros.nr  replacements.nr
mavros_stdlib/replacements/: blake3.nr  poseidon2_permutation.nr  sha256_compression.nr
noir_examples/poseidon2_simple/: Nargo.toml
noir_examples/replace_poseidon/: Prover.toml
noir_examples/sha256/: Prover.toml
noir_examples/slice_push_unwitnessed/: Nargo.toml  Prover.toml
noir_examples/slice_push_witnessed/: Nargo.toml  Prover.toml
noir_examples/unc_func/: Nargo.toml  Prover.toml
noir_stdlib_patches/: hash_mod_patched.nr  poseidon2_impl.nr
noir_tests/big_tuple/: Nargo.toml  (+1 more)
opcode-gen/: Cargo.toml
opcode-gen/src/: lib.rs
src/: abi_helpers.rs  api.rs  driver.rs  foreign_impl_replacement.rs  lib.rs  lowlevel_replacement.rs  plotting.rs  project.rs
stdlib_noir_impls/: poseidon2_permutation.nr
stdlib_replacements/: Nargo.toml  README.md  poseidon2.nr  sha256_compression.nr
vm/: Cargo.toml
vm/src/: array.rs  bytecode.rs  interpreter.rs  layout.rs  lib.rs
wasm-layout/: Cargo.toml
wasm-runner/: README.md
wasm-runtime/: Cargo.toml
wasm-runtime/src/: lib.rs
(+347 files in other folders)
