[workspace]
resolver = "3"
members = ["opcode-gen", "ssa-builder", "wasm-runtime"]

[package]
name = "mavros"
version = "0.1.0"
edition = "2024"

[features]
default = ["wasm", "plotting"]
wasm = ["dep:inkwell", "dep:wasmtime"]
plotting = ["dep:plotters"]

[dependencies]
fm = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "fm" }
nargo = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "nargo" }
nargo_toml = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "nargo_toml" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "noirc_driver" }
noirc_errors = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "noirc_errors" }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "noirc_frontend" }
noirc_evaluator = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "noirc_evaluator" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", branch = "master", package = "noirc_abi" }

clap = { version = "4.5.17", features = ["unstable-v5"] }
derivative = "2.2.0"
indoc = "2.0.5"
itertools = "0.14.0"
thiserror = "2.0.12"
tempfile = "3.19.1"
petgraph = "0.6.5" # Cannot bump as it is currently required to be this version by a dependency
convert_case = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8.20" }
ark-bn254 = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0", features = ["derive"] }
bincode = "1.3"

# Optional heavy dependencies
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
plotters = { version = "0.3.5", optional = true }
wasmtime = { version = "31", optional = true }

tracing = "0.1.41"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.8"

opcode-gen = { path = "opcode-gen" }
ssa-builder = { path = "ssa-builder" }
cargo_metadata = "0.23.1"

[dev-dependencies]
anyhow = "1.0.87"
tempfile = "3.8.1"
walkdir = "2.5.0"

[[bin]]
name = "mavros"
path = "src/bin/main.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"

[profile.release]
debug = true
