[workspace]
resolver = "3"
members = ["mavros-artifacts", "opcode-gen", "vm", "wasm-layout", "wasm-runtime"]

[package]
name = "mavros"
version = "0.1.0"
edition = "2024"

[dependencies]
fm = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "fm" }
nargo = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "nargo" }
nargo_toml = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "nargo_toml" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "noirc_abi" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "noirc_driver" }
noirc_errors = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "noirc_errors" }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.18", package = "noirc_frontend" }

ark-bn254 = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
bincode = "1.3"
clap = { version = "4.5.17", features = ["unstable-v5", "derive"] }
itertools = "0.14.0"
num-bigint = "0.4"
num-traits = "0.2"
petgraph = "0.6.5" # Cannot bump as it is currently required to be this version by a dependency
serde_json = "1.0"
tempfile = "3.19.1"
thiserror = "2.0.12"

inkwell = { version = "0.9.0", features = ["llvm22-1"] }
plotters = { version = "0.3.5" }
wasmtime = { version = "31" }

rand = "0.8"
tracing = "0.1.41"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

cargo_metadata = "0.23.1"
mavros-artifacts = { path = "mavros-artifacts" }
mavros-vm = { path = "vm" }
mavros-wasm-layout = { path = "wasm-layout" }

[dev-dependencies]
anyhow = "1.0.87"
tempfile = "3.8.1"
walkdir = "2.5.0"

[[bin]]
name = "mavros"
path = "src/bin/main.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"

[profile.release]
debug = true
opt-level = "z"
lto = "thin"
