[workspace]
resolver = "3"
members = [
  "compiler",
  "mavros-artifacts",
  "opcode-gen",
  "vm",
  "wasm-layout",
  "wasm-runtime",
]

[workspace.package]
version = "0.1.0"
authors = ["Reilabs"]
categories = ["compilers", "cryptography"]
edition = "2024"
keywords = ["cryptography", "spartan", "zero-knowledge"]
license = "Apache-2.0"
repository = "https://github.com/reilabs/mavros"

[workspace.dependencies]
# The Mavros crates themselves so we can easily use them as `crate.workspace = true` in the crate
# dependency lists.
mavros-artifacts = { path = "./mavros-artifacts/" }
mavros-compiler = { path = "./compiler" }
mavros-opcode-gen = { path = "./opcode-gen/" }
mavros-vm = { path = "./vm/" }
mavros-wasm-layout = { path = "./wasm-layout/" }
mavros-wasm-runtime = { path = "./wasm-runtime/" }

# The rest of the shared dependencies (or ones that are fussy about versions)
anyhow = { version = "1.0.87" }
ark-bn254 = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
num-traits = { version = "0.2.19" }
serde = { version = "1.0.204", features = ["derive"] }
tempfile = { version = "3.19.1" }
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41" }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = { version = "2.5.0" }

[profile.release]
debug = true
opt-level = "z"
lto = true

# These should be inherited in workspace packages using `[lints] workspace = true`
[workspace.lints.clippy]
# Allow all except performance and correctness by default.
all = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
complexity = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "allow", priority = -1 }
suspicious = { level = "allow", priority = -1 }

# Then we turn on the ones we care about, focusing on reducing needlessly silly code.
cast_slice_from_raw_parts = "deny"
clone_on_copy = "deny"
crosspointer_transmute = "deny"
# Bans std's randomly-seeded hash collections (see clippy.toml): iteration order leaks into
# emitted identifiers, breaking deterministic compilation. Use crate::collections instead.
disallowed_types = "deny"
drop_non_drop = "deny"
expect_fun_call = "deny"
for_kv_map = "deny"
from_raw_with_void_ptr = "deny"
let_and_return = "deny"
let_underscore_future = "deny"
multi_assignments = "deny"
needless_borrows_for_generic_args = "deny"
needless_return = "deny"
octal_escapes = "deny"
only_used_in_recursion = "deny"
ptr_offset_with_cast = "deny"
redundant_closure = "deny"
single_match = "deny"
size_of_ref = "deny"
to_string_in_format_args = "deny"
unconditional_recursion = "deny"
unnecessary_cast = "deny"
useless_conversion = "deny"
