[package]
name = "mavros-ast-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
# The Noir crates the interpreter depends on, pinned once in the workspace manifest so this
# crate and the compiler share one `noirc_frontend` source (the compiled-in field is a global,
# so two distinct sources would conflict).
acvm.workspace = true
noirc_abi.workspace = true
noirc_errors.workspace = true
noirc_frontend.workspace = true

# `serde` feature: `DiffValue` serializes its `BigInt` integer payload to the dump JSON.
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2" }
serde = { workspace = true }

[dev-dependencies]
# The interpreter's tests drive Noir's frontend + monomorphizer (see `validation_frontend`) to
# produce the mono-AST they validate, reusing the compiler's `Project` for package loading. This
# is a dev-only edge, so it does not make the compiler depend on the interpreter (no cycle).
# `default-features = false` drops the compiler's `llvm` feature: the interpreter's tests only
# drive the LLVM-free frontend -> mono-AST path, so they build without an LLVM toolchain.
mavros-compiler = { path = "../compiler", default-features = false }
# The frontend-driving pieces the validation flow assembles directly.
fm.workspace = true
nargo.workspace = true
noirc_driver.workspace = true
serde_json = { version = "1.0" }
tempfile.workspace = true

[features]
# Build the patched local Noir with its Goldilocks field, to validate that the interpreter
# computes identically over a small field. Propagated to the compiler dev-dep so the test
# pipeline's frontend uses the same field.
goldilocks = ["noirc_frontend/goldilocks", "mavros-compiler/goldilocks"]

[lints]
workspace = true
