[package]
name = "mavros-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
# The Mavros crates that the compiler depends on
mavros-artifacts.workspace = true
mavros-vm.workspace = true
mavros-wasm-layout.workspace = true

# The Noir crates that the compiler depends on
acvm = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "acvm" }
fm = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "fm" }
nargo = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "nargo" }
nargo_toml = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "nargo_toml" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "noirc_abi" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "noirc_driver" }
noirc_errors = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "noirc_errors" }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.20", package = "noirc_frontend" }

# The rest of the dependencies
ark-bn254.workspace = true
ark-ff.workspace = true
bincode = { version = "1.3" }
cargo_metadata = { version = "0.23.1" }
clap = { version = "4.5.17", features = ["unstable-v5", "derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
itertools = { version = "0.14.0" }
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
petgraph = { version = "0.6.5" } # Cannot bump as it is currently required to be this version by a dependency
plotters = { version = "0.3.5" }
rand = { version = "0.8" }
serde_json = { version = "1.0" }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
wasmtime = { version = "31" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[[bin]]
name = "mavros"
path = "src/bin/main.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"

[lints]
workspace = true
