[package]
name = "mavros-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
# The Mavros crates that the compiler depends on
mavros-artifacts.workspace = true
mavros-vm.workspace = true
mavros-wasm-layout.workspace = true

# The Noir crates that the compiler depends on
acvm.workspace = true
fm.workspace = true
nargo.workspace = true
nargo_toml.workspace = true
noirc_abi.workspace = true
noirc_driver.workspace = true
noirc_errors.workspace = true
noirc_frontend.workspace = true

# The rest of the dependencies
ark-bn254.workspace = true
ark-ff.workspace = true
bimap = { version = "0.6" }
bincode = { version = "1.3" }
cargo_metadata = { version = "0.23.1" }
clap = { version = "4.5.17", features = ["unstable-v5", "derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"], optional = true }
itertools = { version = "0.14.0" }
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
petgraph = { version = "0.6.5" } # Cannot bump as it is currently required to be this version by a dependency
plotters = { version = "0.3.5" }
rand = { version = "0.8" }
serde_json = { version = "1.0" }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
wasmtime = { version = "31" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[[bin]]
name = "mavros"
path = "src/bin/main.rs"
required-features = ["llvm"]

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"
required-features = ["llvm"]

[features]
# LLVM/inkwell is only needed for witgen/AD codegen (HLSSA -> LLVM -> WASM). The
# Noir -> mono AST -> R1CS path (`api::compile_to_r1cs`) is LLVM-free. Gating LLVM behind
# a default feature lets that path build without an LLVM toolchain via
# `--no-default-features` (e.g. to validate R1CS lowering of a Goldilocks program).
default = ["llvm"]
llvm = ["dep:inkwell"]
# Build the patched local Noir with its Goldilocks field, to validate that Mavros lowers a
# Goldilocks-sourced monomorphized AST. Enabling it flips acir_field's field globally.
goldilocks = ["noirc_frontend/goldilocks", "noirc_driver/goldilocks"]

[lints]
workspace = true
