[package]
name = "mavros-artifacts"
version.workspace = true
edition.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
num-traits.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
ark-std.workspace = true

[lints]
workspace = true
