[package]
name = "mavros-vm"
version.workspace = true
edition.workspace = true

[features]
# When enabled, the interpreter uses an explicit dispatch loop instead of
# tail-call-recursive dispatch. This makes debug builds (where the tail-call
# optimizer is not reliably applied) work without overflowing the stack.
branching-interpreter = []
# When enabled, every opcode handler records an invocation count and an
# accumulated cycle total (read from the architectural cycle counter). The
# interpreter prints a sorted per-opcode report after each VM dispatch run.
# Purely for profiling; adds two timer reads and two counter updates per opcode.
vm-profile = []
[dependencies]
# Dependencies within the Mavros project
mavros-artifacts.workspace = true
mavros-opcode-gen.workspace = true

# All other dependencies
ark-ff.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json = { version = "1.0" }

[lints]
workspace = true
